--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zyro AI - Powered by HanzNesia87</title>
+    <title>Zyro AI - 𝗣𝗼𝘄𝗲𝗿𝗲𝗱 𝗕𝘆 ©𝗛𝗔𝗡𝗭𝗡𝗘𝗦𝗜𝗔𝟴𝟳</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
