--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <img src="https://telegra.ph/file/55a015283055336dc2997.jpg" alt="Logo Zyro" class="logo-image">
                 <div class="logo-area">
                     <strong>Zyro</strong>
-                    <span>Powered by HanzNesia87</span>
+                    <span>𝗣𝗼𝘄𝗲𝗿𝗲𝗱 𝗕𝘆 ©𝗛𝗔𝗡𝗭𝗡𝗘𝗦𝗜𝗔𝟴𝟳</span>
                 </div>
             </div>
             <button id="theme-toggle">Light/Dark</button>
@@ -289,7 +289,7 @@
         <div id="chat-output">
             <div class="message-container initial-greeting">
                 <div class="ai-response-box" data-text="Halo! Saya Zyro. Saya Dibuat Oleh HanzNesia87, Senang Bertemu Denganmu!">
-                    Halo! Saya Zyro. Saya Dibuat Oleh HanzNesia87, Senang Bertemu Denganmu!
+                    Halo! Saya Zyro. Saya Dibuat Oleh 𝗛𝗔𝗡𝗭𝗡𝗘𝗦𝗜𝗔𝟴𝟳, Senang Bertemu Denganmu!
                     <button class="read-button" onclick="bacakanTeks(this)">Bacakan</button>
                 </div>
             </div>
