--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             displayMessage(userText, 'user');
             
             const lowerCaseText = userText.toLowerCase();
-            const nameKeywords = ["siapa nama anda", "siapa yang membuat anda", "namamu siapa", "kamu siapa", "siapa kamu", "nama lu siapa", "kamu siapa?", "siapa yang buat", "dibuat siapa", "anda dibuat siapa"];
+            const nameKeywords = ["siapa nama anda", "siapa yang menciptakan anda", "kamu dibuat sama siapa", "siapa yang membuat anda", "namamu siapa", "kamu siapa", "siapa kamu", "nama lu siapa", "kamu siapa?", "siapa yang buat", "dibuat siapa", "anda dibuat siapa"];
             
             let customResponse = null;
             for (const keyword of nameKeywords) {
