--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <div class="container">
         <header>
             <div class="logo-branding-area">
-                <img src="https://telegra.ph/file/55a015283055336dc2997.jpg" alt="Logo Zyro" class="logo-image">
+                <img src="https://files.catbox.moe/20tlii.jpg" alt="Logo Zyro" class="logo-image">
                 <div class="logo-area">
                     <strong>Zyro</strong>
                     <span>𝗣𝗼𝘄𝗲𝗿𝗲𝗱 𝗕𝘆 ©𝗛𝗔𝗡𝗭𝗡𝗘𝗦𝗜𝗔𝟴𝟳</span>
